--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,28 @@
 
 body {
-  background-color:hsl(234,18.5%,10.6%);
+  background-color:hsl(38.7,54.4%,88.8%);
+  font-family: 'Kanit', sans-serif;
+  line-height: 1.5;
+  margin: 24px;
 }
+
+nav {
+  font-size: 24px;
+  text-align: center;
+}
+
+
+nav a {
+  color: hsl(39.6,98.7%v,70.8%);
+  border-radius: 2px;
+  display: block;
+  padding: 12px 0;
+}
+
+nav a:hover,
+nav a:focus {
+  color: hsl(20.4,55.6%,51.4%)
+}
+
+
+
