--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,31 @@
 
 body {
-  background-color:hsl(38.7,54.4%,88.8%);
+  background-color:hsl(38.7,40.4%,90.8%);
   font-family: 'Kanit', sans-serif;
   line-height: 1.5;
   margin: 24px;
 }
 
+h1 {
+  font-family: 'Architects Daughter', cursive;
+  font-size: 48px;
+  text-transform: capitalize;
+  font-weight: bold;
+  text-align: center;
+  color: hsl(20.4,55.6%,51.4%); 
+}
+
+h2{
+   font-family: 'Architects Daughter', cursive;
+   font-size: 30px;
+  font-weight: bold;
+    color: hsl(39.6,98.7%,70.8%); 
+  
+}
 nav {
   font-size: 24px;
   text-align: center;
 }
-
 
 nav a {
   color: hsl(39.6,98.7%v,70.8%);
@@ -23,6 +38,8 @@ nav a:hover,
 nav a:focus {
   color: hsl(20.4,55.6%,51.4%)
 }
+
+
 
 
 
