--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ nav a:focus {
   body {
     background-color: pink;
   }
+  h2{color:purple;
+  }
 
   nav li {
     display: inline-block;
@@ -72,15 +74,19 @@ nav a:focus {
   }
 }
 
-@media (min-width:1280px) {
+@media (min-width:1200px) {
 
-  header,
+ body {
+    background-color: teal;
+  }
+  h2{  color: hsl(39.6,98.7%,70.8%); 
+  }
   nav {
     display: inline-block;
   }
 
   nav {
-    text-align: right;
+    text-align: center;
     width: calc(100% - 222px);
   }
 }
