--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,11 @@ nav a:focus {
     width: calc(100% - 222px);
   }
 }
+  
+  * {
+  box-sizing: border-box;
+}
+  
   .button-reset {
   background: transparent;
   border: 0;
@@ -105,22 +110,16 @@ nav a:focus {
   font-size: inherit;
   font-weight: inherit;
   padding: 0;
-  text-align: inherit;
-}
-  
-  
-.button {
-  background-color: hsl(308, 24%, 43%);
-  border: 4px solid hsl(282, 36%, 16%);
-  border-radius: 3px;
+  text-align: inherit;  
+  background-color:hsl(39.6,98.7%,70.8%) ;
+  border: 2px solid hsl(282, 36%, 16%);
+  border-radius: 1px;
   color: white;
-  font-size: 20px;
-  transition: all 300ms ease-in-out;
 }
 
 .button:hover,
 .button:focus {
-  background:hsl(20.4,55.6%,51.4%); ;
+ color:hsl(20.4,55.6%,51.4%); ;
 }
 
 
