--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ nav a:focus {
   background-color:hsl(39.6,98.7%,70.8%) ;
   border: 2px solid hsl(282, 36%, 16%);
   border-radius: 1px;
-  color: white;
+  color: hsl(38.7,40.4%,90.8%);
 }
 
 .button:hover,
