--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,27 @@ h4{
   display: inline-block;
 }
 
+
+
+.talks {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.talk1 {
+  padding-bottom:70px;
+}
+
+.talk2 {
+  padding-bottom:70px;
+}
+
+.talk3 {
+  padding-bottom:70px;
+}
+
+
 nav {
   font-size: 24px;
   text-align: center;
@@ -96,6 +117,7 @@ nav a:focus {
     text-align: center;
     width: calc(100% - 222px);
   }
+  
 }
   
   
