--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,16 @@ nav a:focus {
   nav li+li {
     margin-left: 12px;
   }
+  
+  .speaker-photo,
+  .talk-information {
+    display: inline-block;}
+  .talk-information {
+    padding-left:20px;
+    padding-top:-40px;
+  }
+  
+   
 }
 
 @media (min-width:1200px) {
