--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ h2{
    font-family: 'Architects Daughter', cursive;
    font-size: 40px;
   font-weight: bold;
-    color: hsl(39.6,98.7%,70.8%); 
+  color: hsl(39.6,98.7%,70.8%); 
+  
   
 }
 
@@ -33,6 +34,10 @@ h3{
 
 h4{
   font-size:24px;
+}
+
+h6{
+ font-size:16px; 
 }
 
 .u-list-reset {
@@ -74,6 +79,7 @@ h4{
   padding-bottom:30px;
   line-height: 2;
 }
+
 
  
   .button-reset {
@@ -163,6 +169,7 @@ nav a:focus {
     text-align: center;
     width: calc(100% - 222px);
   }
+  
   
 }
   
