--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ h6{
 
 
 nav {
+  color: ;
   font-size: 24px;
   text-align: center;
 }
@@ -124,6 +125,7 @@ nav a:focus {
   body {
     background-color:hsl(38.7,40.4%,90.8%) ;
   }
+  
   
   
 @media (min-width:750px) {
