--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,16 @@ h2{
 
 h3{
   font-size:30px; 
-  padding-left:30px;
 }
 
 h4{
   font-size:24px;
 }
 
-h6{
+p{
  font-size:16px; 
+  margin-left:28px;
+  margin-right:28px;
 }
 
 .u-list-reset {
@@ -59,18 +60,9 @@ h6{
   padding-left: 0;
 }
 
-.talk1 {
+.talk1,.talk2,.talk3{
   padding-bottom:70px;
-  background-color:white;
-  margin-left:0
-}
-
-.talk2 {
-  padding-bottom:70px;
-}
-
-.talk3 {
-  padding-bottom:70px;
+  margin-left:0;
 }
 
  
@@ -115,7 +107,7 @@ nav a {
   color: hsl(39.6,98.7%v,70.8%);
   border-radius: 2px;
   display: block;
-  padding: 12px 0;
+  padding:0;
 }
 
 nav a:hover,
@@ -174,8 +166,7 @@ nav a:focus {
     text-align: center;
     width: calc(100% - 222px);
   }
-  
-  
+     
 }
   
   
